Sat Jun 13 10:51:56 1998  Stefan Jeske  <stefan@gtk.org>

	* gtkspinbutton.h gtkspinbutton.c testgtk.c 
	(gtk_spin_button_set_shadow_type):
	New API to set the shadow type of the arrow panel.

Fri Jun 12 21:20:42 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk/gtkoptionmenu.c (gtk_option_menu_expose): Removed
	code for drawing the child in two places at once. Unfortunately,
	not only does it not work anymore (because reparenting has
	been fixed), but it also triggers reparent/expose loops
	in some cases.

	* gtk/gtkoptionmenu.c (gtk_option_menu_remove_contents): Removed
	an unecessary unrealize.

Fri Jun 12 21:18:56 1998  Owen Taylor  <otaylor@gtk.org>

	* gdk/gdkwindow.c (gdk_window_reparent): Update the
	  old and new parents' child window lists properly.

Fri Jun 12 09:24:47 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkpacker.h:
	* gtk/gtkpacker.c: renamed enum GtkAnchor and GtkSide to GtkAnchorType
 	and GtkSideType, to be consistent with the rest of Gtk's enum
 	definitions. wrapped the enum definitions with the G_ eunm wrappers.
	spelled out the GTK_ANCHOR_* enum values, since single letters don't
	work out corectly as nick-names (left the old values as aliases).
	some signdness corrections (border-width, spacing), could stand more.

Thu Jun 11 14:38:33 CDT 1998 Shawn T. Amundson <amundson@gtk.org>

	* gtk/gtkpacker.c, gtk/gtkpacker.h, gtk/gtk.h, gtk/Makefile.am: 
	  Added gtkpacker

	* examples/packer/pack.c, examples/packer/Makefile: Added
	  gtkpacker example

Thu Jun 11 13:09:00 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk/gtktext.c (remove_cache_line): Fixed broken
	list-removal code.

	* gtk/gtktext.c: (gtk_text_delete_(forward/backward)_cahr)
	Check bounds before deleting.

Wed Jun 10 23:21:33 1998  Owen Taylor  <otaylor@gtk.org>

	* autogen.sh: Support ACLOCAL_FLAGS

Wed Jun 10 20:54:37 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk-config.in: Added missing quotes.

Wed Jun 10 18:44:22 PDT 1998 Manish Singh <yosh@gimp.org>
